--- a/photo_library/shared_photo_library/templates/shared_photo_library/homepage.html
+++ b/photo_library/shared_photo_library/templates/shared_photo_library/homepage.html
@@ -10,8 +10,18 @@
 
 {% endblock %}
 
+{% if user_authenticated %}
+    {% block contains_link %}
+    <a class="nav-link" onclick="showNotifications()" href="#"><i id="notification" style="color: black" class="far fa-bell"><b id="notificationNumber"></b></i></a>
+
+    {% endblock %}
+{% endif %}
+
+
 
 {% block content %}
+
+
     <li class="selected">
         <div class="cd-full-width">
             <div class="container-fluid js-tm-page-content tm-page-pad" data-page-no="5" data-page-type="gallery">
@@ -109,5 +119,40 @@
         </div>
     </li>
 
+    <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 style="font-size: 32px" class="modal-title" id="exampleModalLabel">Notifications</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+          <div id="notifications">
+              <div class="alert alert-info" role="alert">
+                  A simple info alert—check it out!
+              </div>
+              <div class="alert alert-info" role="alert">
+                  A simple info alert—check it out!
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+    <div id="add">
+    </div>
+    {% if user_authenticated %}
+        <button onclick="deneme({{ user.id }})">Heyyooo</button>
+    {% endif %}
+
+<script>
+
+
+    function showNotifications(){
+        $('#notificationModal').modal('show')
+    }
+
+</script>
 
 {% endblock %}
