--- a/photo_library/shared_photo_library/templates/shared_photo_library/all_photos.html
+++ b/photo_library/shared_photo_library/templates/shared_photo_library/all_photos.html
@@ -10,8 +10,6 @@
 {% endblock %}
 
 
-
-
 {% block content %}
 
         <li class="selected">
@@ -230,6 +228,27 @@
             </div>
           </div>
 </div>
+ <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 style="font-size: 32px" class="modal-title" id="exampleModalLabel">Notifications</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+          <div id="notifications">
+              <div class="alert alert-info" role="alert">
+                  A simple info alert—check it out!
+              </div>
+              <div class="alert alert-info" role="alert">
+                  A simple info alert—check it out!
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <script>
 
@@ -380,6 +399,14 @@ modal.addEventListener('hidden.bs.modal', function (event) {
         addButton.style.display = "none";
         editTags.style.display='none'
 })
+
+</script>
+
+<script>
+
+    function showNotifications(){
+        $('#notificationModal').modal('show')
+    }
 
 </script>
 
