--- a/photo_library/shared_photo_library/templates/shared_photo_library/view_detail.html
+++ b/photo_library/shared_photo_library/templates/shared_photo_library/view_detail.html
@@ -9,6 +9,11 @@
 
 {% endblock %}
 
+{% block contains_link %}
+    <a class="nav-link" onclick="showNotifications()" href="#"><i id="notification" style="color: black" class="far fa-bell"><b id="notificationNumber"></b></i></a>
+
+{% endblock %}
+
 
 
 
@@ -176,6 +181,26 @@
         </div>
       </div>
     </div>
+ <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 style="font-size: 32px" class="modal-title" id="exampleModalLabel">Notifications</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+          <div id="notifications">
+              <div class="alert alert-info" role="alert">
+                  A simple info alert—check it out!
+              </div>
+              <div class="alert alert-info" role="alert">
+                  A simple info alert—check it out!
+              </div>
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
 
     <script>
 
@@ -277,6 +302,13 @@ shareModal.addEventListener('hidden.bs.modal', function (event) {
 })
 
 
+
+</script>
+<script>
+
+    function showNotifications(){
+        $('#notificationModal').modal('show')
+    }
 
 </script>
 
