--- a/photo_library/templates/index.html
+++ b/photo_library/templates/index.html
@@ -57,17 +57,24 @@ http://www.tooplate.com/view/2086-multi-color
                     <div class="tm-navbar-bg">
 
                         <a class="navbar-brand text-uppercase" href="#"><i class="fa fa-images tm-brand-icon"></i>Simpek Photos</a>
-                        <div align="right" style="width: 650px; margin-right: 20px">
+                        <div style="width: 600px; margin-left: 400px">
                             <a class="nav-link" href="{% url 'shared_photo_library:home' %}"><i class="fas fa-home"></i>Home <span class="sr-only">(current)</span></a>
                             <a class="nav-link" href="{% url 'shared_photo_library:photos' %}"><i class="fas fa-images"></i>Photos</a>
                             <a class="nav-link" href="{% url 'shared_photo_library:collections' %}"><i class="fas fa-folder"></i>Collections</a>
                             <a class="nav-link" href="{% url 'shared_photo_library:views' %}"><i class="fas fa-filter"></i>Views</a>
-                            <a class="nav-link" href="{% url 'shared_photo_library:logout' %}"><i class="fas fa-sign-out-alt"></i></a>
                         </div>
+                        <br>
+                        <div align="right" style="width: 100px; margin-right: 20px">
+                            <a class="nav-link" onclick="showNotifications()" href="#"><i id="notification" style="color: black" class="far fa-bell"><b id="notificationNumber"></b></i></a>
 
-                        {% block contains_link %}
+                            {% block contains_link %}
 
-                        {% endblock %}
+                            {% endblock %}
+                            <a class="nav-link" href="{% url 'shared_photo_library:logout' %}"><i class="fas fa-sign-out-alt"></i></a>
+
+                            </div>
+
+
 
 
 
@@ -130,6 +137,23 @@ http://www.tooplate.com/view/2086-multi-color
             <div class="loader-section section-right"></div>
 
         </div>
+
+         <div class="modal fade" id="notificationModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 style="font-size: 32px" class="modal-title" id="exampleModalLabel">Notifications</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+          <div id="notifications">
+
+          </div>
+      </div>
+    </div>
+  </div>
+</div>
+
         
         <!-- load JS files -->
 {#        <script src="../../../static/js/jquery-1.11.3.min.js"></script>         <!-- jQuery (https://jquery.com/download/) -->#}
@@ -232,8 +256,129 @@ http://www.tooplate.com/view/2086-multi-color
 
 
 
-        </script>            
+        </script>
 
+
+    <script>
+
+        function showNotifications(){
+            $('#notificationModal').modal('show')
+        }
+
+        function getCookie(name) {
+          if (!document.cookie) {
+            return null;
+          }
+
+          var cookie = document.cookie.split(';')[0];
+
+          return cookie.split('=')[1]
+
+        }
+
+        var socket = new WebSocket('ws://' + window.location.host + '/notification/');
+
+        socket.onopen = function open() {
+          console.log('WebSockets connection created.');
+          {#socket.close();#}
+        };
+
+        socket.onmessage = function(e) {
+            const data = e.data
+            const csrfToken = getCookie('CSRF-TOKEN');
+            const url = "{% url 'shared_photo_library:notifications' %}";
+            fetch(url, {
+              method: 'POST', // or 'PUT'
+              headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': csrfToken
+              },
+              body: JSON.stringify(data)
+            })
+            .then(response => response.json())
+            .then(data => {
+                if(data['notification'] !==""){
+
+                    var notification = document.createElement('div');
+                    notification.className = "alert alert-info";
+                    notification.role = "alert";
+                    notification.innerText = data['notification'];
+
+                    document.getElementById("notifications").append(notification);
+
+                    var not = document.getElementById("notification");
+                    var notNo = document.getElementById("notificationNumber");
+                    not.style.color = "red";
+
+                    if(notNo.innerText ===""){
+                        notNo.innerText = "1";
+                    }
+                    else{
+                        notNo.innerText = (parseInt(notNo.innerText)+1).toString();
+                    }
+
+                }
+                else{
+
+                }
+              console.log('heyyyoo notifications oldu mu:', data);
+
+            })
+            .catch((error) => {
+              console.error('Error:', error);
+            });
+
+
+            console.log(data)
+            {#console.log("loloooooooooooooooooooooooo");#}
+
+        };
+        socket.onclose = function(e) {
+            console.log('Notification socket closed');
+        };
+    </script>
+{#    <script>#}
+{#        var notificationSocket = new WebSocket(#}
+{#        'ws://' + window.location.host +#}
+{#        '/ws/notification/' );#}
+{##}
+{#        notificationSocket.onmessage = function(e) {#}
+{#            console.log("loloooooooooooooooooooooooo");#}
+            {#var data = JSON.parse(e.data);#}
+            {#var notification_id = data['notification_ids'];#}
+            {#console.log("not_id : ", notification_id);#}
+            {#$.ajax({#}
+            {#    type: 'get',#}
+            {#    url: "{% url 'social_network_app:see-notification'  %}",#}
+            {#    data: {#}
+            {#        'notification_ids': notification_id,#}
+            {#        csrfmiddlewaretoken: $('input[name=csrfmiddlewaretoken]').val(),#}
+            {#    },#}
+            {#    success: function (response) {#}
+            {#        console.log(response);#}
+            {#        if (response['message'] != "") {#}
+            {##}
+            {#            $('#notifications').text(response['message'])#}
+            {#                .css({#}
+            {#                    position: "fixed",  bottom: "10px",#}
+            {#                    right: "5px", padding: "15px", "border-radius": "8px",#}
+            {#                    "box-shadow": "4px 4px 2px #808080", 'background-color': "#ff8c14"#}
+            {#                })#}
+            {#                .fadeIn().delay(3000).slideUp();#}
+            {#        }#}
+            {##}
+            {#    },#}
+            {#    error: function (data) {#}
+            {#      alert("error ");#}
+            {#    },#}
+            {#});#}
+{#        };#}
+{##}
+{#        notificationSocket.onclose = function(e) {#}
+{#            console.error('Notification socket closed unexpectedly');#}
+{#        };#}
+{##}
+{#      </script>#}
 
 
 
