--- a/photo_library/shared_photo_library/templates/shared_photo_library/all_photos.html
+++ b/photo_library/shared_photo_library/templates/shared_photo_library/all_photos.html
@@ -51,17 +51,17 @@
                                                     <i  class="fas fa-edit"></i>
                                                     </button>
                                                 </div>
-                                                <div class="col">
-                                                    <button onclick="deletePhoto({{ photo.id  }})" type="button"  style="border: none; display: inline-block; background: transparent "data-bs-toggle="modal" data-bs-target="#deletePhoto">
-                                                        <i  class="fas fa-trash"></i>
-                                                    </button>
-                                                </div>
-
-                                                <div class="col">
-                                                    <button onclick="addPhotoToCollection({{ photo.id  }})" type="button"  style="border: none; display: inline-block; background: transparent "data-bs-toggle="modal " data-bs-target="#addToCollection">
-                                                        <i  class="fas fa-folder-plus"></i>
-                                                    </button>
-                                                </div>
+{#                                                <div class="col">#}
+{#                                                    <button onclick="deletePhoto({{ photo.id  }})" type="button"  style="border: none; display: inline-block; background: transparent "data-bs-toggle="modal" data-bs-target="#deletePhoto">#}
+{#                                                        <i  class="fas fa-trash"></i>#}
+{#                                                    </button>#}
+{#                                                </div>#}
+{##}
+{#                                                <div class="col">#}
+{#                                                    <button onclick="addPhotoToCollection({{ photo.id  }})" type="button"  style="border: none; display: inline-block; background: transparent "data-bs-toggle="modal " data-bs-target="#addToCollection">#}
+{#                                                        <i  class="fas fa-folder-plus"></i>#}
+{#                                                    </button>#}
+{#                                                </div>#}
 
 
 
