--- a/photo_library/shared_photo_library/templates/shared_photo_library/all_collections.html
+++ b/photo_library/shared_photo_library/templates/shared_photo_library/all_collections.html
@@ -25,7 +25,7 @@
                     <br><br>
                     <div id="collections" class="row">
                         {% for col in collections %}
-                            <div class="grid-item">
+                            <div id="col-{{ col.id }}" class="grid-item">
                                 <figure class="effect-bubba">
                                     <img class="img-fluid tm-img cover" src="{{ col.cover.url }}" alt="Image"  style="height:300px; width:300px;">
                                     <figcaption>
@@ -165,6 +165,119 @@
         });
 
     }
+
+</script>
+
+
+<script>
+
+    var socket = new WebSocket('ws://' + window.location.host + '/notification/');
+    console.log(socket)
+
+        socket.onopen = function open() {
+          console.log('WebSockets connection created.');
+          {#socket.close();#}
+        };
+
+        socket.onmessage = function(e) {
+            const data = e.data
+            const csrfToken = getCookie('CSRF-TOKEN');
+            const url = "{% url 'shared_photo_library:notifications' %}";
+            fetch(url, {
+              method: 'POST', // or 'PUT'
+              headers: {
+                'Content-Type': 'application/json',
+                'X-CSRFToken': csrfToken
+              },
+              body: JSON.stringify(data)
+            })
+            .then(response => response.json())
+            .then(data => {
+                console.log("data: ", data)
+                if(data['change']){
+                    if(data['type']==="share"){
+                        var col_item= document.createElement("div");
+                        col_item.className = "grid-item";
+                        col_item.id = "col-"+data['id'];
+                        var fig = document.createElement("figure");
+                        fig.className = "effect-bubba";
+                        var img = document.createElement("img");
+                        img.src = data['url']
+                        img.style = "height:300px; width:300px";
+                        img.className = "img-fluid tm-img cover";
+                        img.style = "height:300px; width:300px;"
+
+                        var figcapt = document.createElement("figcaption");
+
+                        var h3 = document.createElement("h3");
+                        h3.style = "background-color: #cdcadd; width: 300px; padding-bottom: 10px; padding-top: 10px";
+                        h3.className = 'tm-figure-title';
+                        h3.append(document.createElement("span").textContent= data['collection_name']);
+                        figcapt.append(h3);
+                        var p = document.createElement("p");
+                        p.className = 'tm-figure-description';
+                        p.textContent = "created by "+ data['created_by']
+                        figcapt.append(p);
+
+                        p = document.createElement("p");
+                        p.className = 'tm-figure-description';
+                        p.textContent = data['date']
+                        figcapt.append(p);
+
+                        var link = document.createElement("a");
+                        link.className = 'tm-figure-description';
+
+                        link.href = "/shared-photo-library/collection/"+data['id'];
+                        figcapt.append(link);
+
+                        fig.append(img);
+                        fig.append(figcapt);
+
+                        col_item.append(fig);
+                        document.getElementById("collections").append(col_item);
+
+                    }
+
+                    else if(data['type']==="unshare"){
+                        console.log("unshared col")
+                        document.getElementById("col-"+data['id']).remove()
+                    }
+                    var notification = document.createElement('div');
+                    notification.className = "alert alert-info";
+                    notification.role = "alert";
+                    notification.innerText = data['notification'];
+
+                    document.getElementById("notifications").append(notification);
+
+                    var not = document.getElementById("notification");
+                    var notNo = document.getElementById("notificationNumber");
+                    not.style.color = "red";
+
+                    if(notNo.innerText ===""){
+                        notNo.innerText = "1";
+                    }
+                    else{
+                        notNo.innerText = (parseInt(notNo.innerText)+1).toString();
+                    }
+
+                }
+
+
+              console.log('heyyyoo notifications oldu mu:', data);
+
+            })
+            .catch((error) => {
+              console.error('Error:', error);
+            });
+
+
+            console.log(data)
+            console.log("loloooooooooooooooooooooooo");
+
+        };
+        socket.onclose = function(e) {
+            console.log('Notification socket closed');
+        };
 
 </script>
 
