--- a/photo_library/templates/index.html
+++ b/photo_library/templates/index.html
@@ -72,7 +72,7 @@ http://www.tooplate.com/view/2086-multi-color
                             {% endblock %}
                             <a class="nav-link" href="{% url 'shared_photo_library:logout' %}"><i class="fas fa-sign-out-alt"></i></a>
 
-                            </div>
+                        </div>
 
 
 
@@ -102,7 +102,6 @@ http://www.tooplate.com/view/2086-multi-color
 
                 </nav>
             </div>
-
 
 
             <ul class="cd-hero-slider">
@@ -254,89 +253,91 @@ http://www.tooplate.com/view/2086-multi-color
             });
 
 
+        function showNotifications(){
+            $('#notificationModal').modal('show')
+        }
+
 
 
         </script>
 
 
-    <script>
+{#    <script>#}
+{##}
 
-        function showNotifications(){
-            $('#notificationModal').modal('show')
-        }
-
-        function getCookie(name) {
-          if (!document.cookie) {
-            return null;
-          }
-
-          var cookie = document.cookie.split(';')[0];
-
-          return cookie.split('=')[1]
-
-        }
-
-        var socket = new WebSocket('ws://' + window.location.host + '/notification/');
-
-        socket.onopen = function open() {
-          console.log('WebSockets connection created.');
+{##}
+{#        function getCookie(name) {#}
+{#          if (!document.cookie) {#}
+{#            return null;#}
+{#          }#}
+{##}
+{#          var cookie = document.cookie.split(';')[0];#}
+{##}
+{#          return cookie.split('=')[1]#}
+{##}
+{#        }#}
+{##}
+{#        var socket = new WebSocket('ws://' + window.location.host + '/notification/');#}
+{##}
+{#        socket.onopen = function open() {#}
+{#          console.log('WebSockets connection created.');#}
           {#socket.close();#}
-        };
-
-        socket.onmessage = function(e) {
-            const data = e.data
-            const csrfToken = getCookie('CSRF-TOKEN');
-            const url = "{% url 'shared_photo_library:notifications' %}";
-            fetch(url, {
-              method: 'POST', // or 'PUT'
-              headers: {
-                'Content-Type': 'application/json',
-                'X-CSRFToken': csrfToken
-              },
-              body: JSON.stringify(data)
-            })
-            .then(response => response.json())
-            .then(data => {
-                if(data['notification'] !==""){
-
-                    var notification = document.createElement('div');
-                    notification.className = "alert alert-info";
-                    notification.role = "alert";
-                    notification.innerText = data['notification'];
-
-                    document.getElementById("notifications").append(notification);
-
-                    var not = document.getElementById("notification");
-                    var notNo = document.getElementById("notificationNumber");
-                    not.style.color = "red";
-
-                    if(notNo.innerText ===""){
-                        notNo.innerText = "1";
-                    }
-                    else{
-                        notNo.innerText = (parseInt(notNo.innerText)+1).toString();
-                    }
-
-                }
-                else{
-
-                }
-              console.log('heyyyoo notifications oldu mu:', data);
-
-            })
-            .catch((error) => {
-              console.error('Error:', error);
-            });
-
-
-            console.log(data)
+{#        };#}
+{##}
+{#        socket.onmessage = function(e) {#}
+{#            const data = e.data#}
+{#            const csrfToken = getCookie('CSRF-TOKEN');#}
+{#            const url = "{% url 'shared_photo_library:notifications' %}";#}
+{#            fetch(url, {#}
+{#              method: 'POST', // or 'PUT'#}
+{#              headers: {#}
+{#                'Content-Type': 'application/json',#}
+{#                'X-CSRFToken': csrfToken#}
+{#              },#}
+{#              body: JSON.stringify(data)#}
+{#            })#}
+{#            .then(response => response.json())#}
+{#            .then(data => {#}
+{#                if(data['notification'] !==""){#}
+{##}
+{#                    var notification = document.createElement('div');#}
+{#                    notification.className = "alert alert-info";#}
+{#                    notification.role = "alert";#}
+{#                    notification.innerText = data['notification'];#}
+{##}
+{#                    document.getElementById("notifications").append(notification);#}
+{##}
+{#                    var not = document.getElementById("notification");#}
+{#                    var notNo = document.getElementById("notificationNumber");#}
+{#                    not.style.color = "red";#}
+{##}
+{#                    if(notNo.innerText ===""){#}
+{#                        notNo.innerText = "1";#}
+{#                    }#}
+{#                    else{#}
+{#                        notNo.innerText = (parseInt(notNo.innerText)+1).toString();#}
+{#                    }#}
+{##}
+{#                }#}
+{#                else{#}
+{##}
+{#                }#}
+{#              console.log('heyyyoo notifications oldu mu:', data);#}
+{##}
+{#            })#}
+{#            .catch((error) => {#}
+{#              console.error('Error:', error);#}
+{#            });#}
+{##}
+{##}
+{#            console.log(data)#}
             {#console.log("loloooooooooooooooooooooooo");#}
-
-        };
-        socket.onclose = function(e) {
-            console.log('Notification socket closed');
-        };
-    </script>
+{##}
+{#        };#}
+{#        socket.onclose = function(e) {#}
+{#            console.log('Notification socket closed');#}
+{#        };#}
+{#    </script>#}
 {#    <script>#}
 {#        var notificationSocket = new WebSocket(#}
 {#        'ws://' + window.location.host +#}
